# 2gis-test_task

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  checksum.cpp  checksum.hpp  main.cpp  word_counter.cpp  word_counter.hpp
test/: CMakeLists.txt  checksum_tests.cpp  word_counter_tests.cpp
